--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,6 +203,7 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:20.0.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     implementation project(':lottie-react-native')
+    implementation 'com.google.firebase:firebase-ads:18.0.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
