--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,7 @@ target 'chekapp' do
 
   use_react_native!(:path => config["reactNativePath"])
   pod 'Firebase/Messaging'
+  pod 'Firebase/AdMob'
   
   target 'chekappTests' do
     inherit! :complete
