--- a/ios/chekapp/Info.plist
+++ b/ios/chekapp/Info.plist
@@ -29,6 +29,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>GADIsAdManagerApp</key>
+	<true/>
+	<key>GADApplicationIdentifier</key>
+  <string>ca-app-pub-8023750129034910~6079268202</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs Location access for useful advertisement</string>
 	<key>NSLocationAlwaysUsageDescription</key>
