--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "lottie-ios": "^3.1.8",
@@ -19,8 +22,13 @@
     "react-native": "0.63.2",
     "react-native-animated-loader": "0.0.8",
     "react-native-firebase": "^5.6.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.10.2",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-webview": "^10.4.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
