--- a/ios/chekapp.xcodeproj/xcshareddata/xcschemes/chekapp.xcscheme
+++ b/ios/chekapp.xcodeproj/xcshareddata/xcschemes/chekapp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "chek.app"
+               BuildableName = "Chek.app"
                BlueprintName = "chekapp"
                ReferencedContainer = "container:chekapp.xcodeproj">
             </BuildableReference>
@@ -44,7 +44,7 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
-      launchStyle = "1"
+      launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "chek.app"
+            BuildableName = "Chek.app"
             BlueprintName = "chekapp"
             ReferencedContainer = "container:chekapp.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "chek.app"
+            BuildableName = "Chek.app"
             BlueprintName = "chekapp"
             ReferencedContainer = "container:chekapp.xcodeproj">
          </BuildableReference>
